BORDER attribute with the object tag, using percentage values not working. https://bugs.webkit.org/show_bug.cgi?id=65176

Patch by Mihnea Ovidenie <mihnea@adobe.com> on 2011-08-01
Reviewed by Hajime Morita.

Source/WebCore:

When border presentational attribute for object element has % in it, it should be parsed using HTML parser rules.

Test: fast/borders/border-width-percent.html

* html/HTMLElement.cpp:
(WebCore::HTMLElement::parseBorderWidthAttribute):
* html/HTMLElement.h:
* html/HTMLImageElement.cpp:
* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::parseMappedAttribute):

LayoutTests:

Added the tests with border width with percentages in a new file. Moved them
from images border test file.

* fast/borders/border-width-percent-expected.txt: Added.
* fast/borders/border-width-percent.html: Added.
* fast/images/border-expected.txt:
* fast/images/script-tests/border.js:

Canonical link: https://commits.webkit.org/81261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92118 268f45cc-cd09-0410-ab3c-d52691b4dbfc